--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'entypo';
-  src: url('../fonts/entypo/entypo.eot'); /* IE9 Compat Modes */
-  src: url('../fonts/entypo/entypo.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/entypo/entypo.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/entypo/entypo.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/entypo/entypo.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('../entypo/entypo.eot'); /* IE9 Compat Modes */
+  src: url('../entypo/entypo.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../entypo/entypo.woff') format('woff'), /* Modern Browsers */
+       url('../entypo/entypo.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../entypo/entypo.svg#svgFontName') format('svg'); /* Legacy iOS */
   }
 
 body {
@@ -28,7 +28,22 @@ header {
   width: 100%;
   height: auto;
 }
-.twitter, .facebook {
-  font-family: "entypo";
-  color: black;
+h1 {
+  font-size: 1.5em;
+  line-height: 2.5em;
+  font-style: italic;
 }
+h2, a {
+  font-size: 1em;
+  line-height: 2em;
+}
+.blog, .hours {
+  color: #990033;
+}
+.social-media {
+  margin-top: 25px;
+}
+a {
+  text-decoration: none;
+}
+
